--- a/Project_Parking(web-python-sql)/templates/registration_complete.html
+++ b/Project_Parking(web-python-sql)/templates/registration_complete.html
@@ -4,34 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parking reserve</title>
+    <title>Reservation</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style/style.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='style/normalize.css') }}">
-    <!-- <link rel="stylesheet" href="..//static/style/style.css">
-    <link rel="stylesheet" href="..//static/style/normalize.css"> -->
 </head>
 <body>
     <header>
-        <div class="logo">
-            <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo de Parking Reservation">
-            <!-- <img src="../static/images/logo.png" alt="Logo de Parking Reservation"> -->
-            <h1>Parking Reservation</h1>
-        </div>
+        <h1>Parking Reservation</h1>
         <nav>
             <ul>
                 <li><a href="{{ url_for('index') }}">Home</a></li>
                 <li><a href="{{ url_for('registration') }}">Registration</a></li>
-                <li><a href="{{ url_for('login') }}">Login</a></li>
+                <li><a href="{{ url_for('login') }}">login</a></li>
             </ul>
         </nav>
     </header>
-    
     <main>
-        <h1>Bienvenido a la Página de Inicio</h1>
-        <h2>pagina de prueba</h2>
+        <h1>Registro de Usuarios</h1>
+        <h2>REGISTRO COMPLETO</h2>
     </main>
     <footer>
         <p>&copy; 2023 Parking Reservation</p>
     </footer>
 </body>
 </html>
+
+<!-- escribe el codigo SQL para crear la base de datos "Parking" y la tabla "reservations" 
+luego agrega 10 filas a la tabla reservations que tenga:
+id autoincremental
+numero de parking
+status -->
