--- a/DataBase_&_frontend - Parking_project/templates/reservation.html
+++ b/DataBase_&_frontend - Parking_project/templates/reservation.html
@@ -22,16 +22,37 @@
 
     <main>
         <h2>Available Parking Sites</h2>
-        <form id="reservation-form">
-            <ul id="parking-list"></ul>
-            <input type="submit" value="Reservar">
+        <h3>Hola Mundo 2</h3>
+        <form id="reservation-form" action="/update_parking" method="POST">
+
+            <ul id="parking-list">
+                {% for parking in parking_data %}
+                    <li>
+                        <input type="hidden" name="parking_id" value="{{ parking[0] }}">
+                        Parking Number: {{ parking[1] }} | Status: 
+                        <select name="status">
+                            <option value="0" {% if parking[2] == 0 %}selected{% endif %}>Reservado</option>
+                            <option value="1" {% if parking[2] == 1 %}selected{% endif %}>Disponible</option>
+                        </select>
+                        Start Date: 
+                        <input type="datetime-local" name="start_date" value="{{ parking[3] }}">
+                        End Date: 
+                        <input type="datetime-local" name="end_date" value="{{ parking[4] }}">
+                    </li>
+                {% endfor %}
+            </ul>
+            
+
+            <input type="submit" value="Reservar">    
         </form>
-    </main>    
+        
+    </main>
+    
     
     <footer>
         <p>&copy; 2023 Parking Reservation</p>
     </footer>
     <!-- Incluye el archivo JS -->
-    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+    <!-- <script src="{{ url_for('static', filename='js/main.js') }}"></script> -->
 </body>
 </html>
